Mostrando livros apenas se clicar no botão toggle

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,17 +1,20 @@
 <div>
   <h2>Programming book list!</h2>
 
-  <button (click)="handleClick()" [disabled]="bookButtonDisabled">Show books</button>
+  <button (click)="toggleBooks()" [disabled]="bookButtonDisabled">Show books</button>
   <br>
   <input type="text" [(ngModel)]="textOnHtml">
   <p>Inserted text: {{ textOnHtml }}</p>
-  <ul>
-    <ng-template ngFor let-item [ngForOf]="books" let-i="index">
-        <li>
-          <img [src]="books[i].img_path" [alt]="books[i].name" width="200px"><br>
-          {{ books[i].name }} <br>
-          by {{ books[i].author}}
-        </li>
-    </ng-template>
-  </ul>
+
+  <div *ngIf="isShowing">
+    <ul>
+      <ng-template ngFor let-item [ngForOf]="books" let-i="index">
+          <li>
+            <img [src]="books[i].img_path" [alt]="books[i].name" width="200px"><br>
+            {{ books[i].name }} <br>
+            by {{ books[i].author}}
+          </li>
+      </ng-template>
+    </ul>
+  </div>
 </div>
