--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -10,9 +10,10 @@
     <ul>
       <ng-template ngFor let-item [ngForOf]="books" let-i="index">
           <li>
-            <img [src]="books[i].img_path" [alt]="books[i].name" width="125px"><br>
-            {{ books[i].name }} <br>
-            by {{ books[i].author}}
+            <img [src]="books[i].img_path" [alt]="books[i].name" width="125px">
+            {{ books[i].name | titlecase }} <br>
+            by {{ books[i].author | uppercase}}<br>
+            {{ books[i].price | currency: 'R$ '}}
           </li>
       </ng-template>
     </ul>
