--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -8,19 +8,9 @@
 
   <div *ngIf="isShowing">
     <ul>
-
-        <li *ngFor="let book of books; let i=index"class="book">
-
-          <img [src]="book.img_path" [alt]="book.name" width="125px">
-
-          <p>
-            {{ book.name | titlecase }}<br>
-            by {{ book.author | uppercase}}<br>
-            {{ book.price | currency: 'R$ '}}
-          </p>
-
-        </li>
-
+      <ng-container *ngFor="let singleBook of books; let i=index">
+        <app-book [book]="singleBook"></app-book>
+      </ng-container>
     </ul>
   </div>
 </div>
