--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,11 @@
 <h1>Your Cart</h1>
 <div *ngIf="getCart().length > 0">
-  <p></p>
+  <div *ngFor="let book of getCart()">
+    <p>{{ book.name }}</p>
+  </div>
 </div>
-<div *ngIf="getCart().length == 0">No books in your cart</div>
+<div *ngIf="getCart().length == 0">
+  <p>
+    No books in your cart
+  </p>
+</div>
