botão e funcionalidade de remover livro do carrinho

--- a/src/app/books/book/book.component.html
+++ b/src/app/books/book/book.component.html
@@ -8,5 +8,6 @@
     {{ book.price | currency: 'R$ '}}
   </p>
 
-  <button (click)="sendToCart()">Add to Cart</button>
+  <button *ngIf="!isInCart" (click)="sendToCart()">Add to Cart</button>
+  <button *ngIf="isInCart" (click)="removeFromCart()">Remove from Cart</button>
 </li>
