inserindo titulo que ficava no app component html

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,3 +1,5 @@
+<h1>Programming book list!</h1>
+
 <div>
   <button (click)="isShowing = !isShowing" [disabled]="bookButtonDisabled">
     <ng-container *ngIf="!isShowing">Show Books</ng-container>
