--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,39 @@
-<p>register works!</p>
+<div class="flex justify-center">
+
+  <form (ngSubmit)="submit()" class="p-4 mt-0 rounded-lg border m-auto w-1/3" #myForm="ngForm">
+
+    <h1 class="text-center text-xl">Register</h1>
+
+    <div class="my-5 w-full">
+      <label for="email">Email</label>
+      <input type="email" id="email" [(ngModel)]="form.email" name="email" id="email" #email="ngModel" class="p-2 rounded w-full border text-sm" placeholder="Email Address" required>
+    </div>
+
+    <div *ngIf="email.invalid && (email.dirty || email.touched)" class="p-2 bg-red-300 text-red-800 rounded">
+      Email field must be valid!
+    </div>
+
+    <div class="my-5 w-full">
+      <label for="email">Password</label>
+      <input type="password" [(ngModel)]="form.password" name="password" id="password" #password="ngModel" required class="p-2 rounded w-full border text-sm" placeholder="Password">
+    </div>
+
+    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="p-2 bg-red-300 text-red-800 rounded">
+      Password field must be valid!
+    </div>
+
+    <div class="my-5 w-full">
+      <label for="email">Confirm Password</label>
+      <input type="password" [(ngModel)]="form.confirm_password" name="confirm_password" id="confirm_password" #confirm_password="ngModel" required class="p-2 rounded w-full border text-sm" placeholder="Password">
+    </div>
+
+    <div *ngIf="confirm_password.invalid && (confirm_password.dirty || confirm_password.touched)" class="p-2 bg-red-300 text-red-800 rounded">
+      Password confirmation field must be valid!
+    </div>
+
+    <div class="my-5 w-full">
+      <input type="submit" [disabled]="myForm.form.invalid" class="p-2 w-full bg-purple-700 text-white hover:bg-purple-900 rounded">
+    </div>
+
+  </form>
+</div>
