--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,16 +1,31 @@
 <div class="flex h-screen w-screen justify-center">
-  <form (ngSubmit)="submit()" class="p-4 rounded-lg border m-auto w-1/3">
+
+  <form (ngSubmit)="submit()" #myForm="ngForm" class="p-4 rounded-lg border m-auto w-1/3">
+
     <h1 class="text-center text-xl">Login</h1>
+
     <div class="my-5 w-full">
       <label for="email">Email</label>
-      <input type="email" [(ngModel)]="form.email" name="email" class="p-2 rounded w-full border" placeholder="Email Address">
+      <input type="email" [(ngModel)]="form.email" name="email" class="p-2 rounded w-full border" placeholder="Email Address" #email="ngModel" required>
     </div>
+
+    <div *ngIf="email.invalid && (email.dirty || email.touched)" class="p-2 bg-red-300 text-red-800 rounded">
+      Email field must be valid!
+    </div>
+
     <div class="my-5 w-full">
       <label for="email">Password</label>
-      <input type="password" [(ngModel)]="form.password" name="password" class="p-2 rounded w-full border" placeholder="Password">
+      <input type="password" [(ngModel)]="form.password" name="password" class="p-2 rounded w-full border" placeholder="Password" #password="ngModel" required>
     </div>
+
+    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="p-2 bg-red-300 text-red-800 rounded">
+      Password confirmation field must be valid!
+    </div>
+
     <div class="my-5 w-full">
-      <input type="submit" class="p-2 w-full bg-purple-700 text-white hover:bg-purple-900 rounded">
+      <input type="submit" [disabled]="myForm.form.invalid" class="p-2 w-full bg-purple-700 text-white hover:bg-purple-900 rounded">
     </div>
+
   </form>
+
 </div>
